syntax = "proto3";
package slots;

option go_package = "github.com/snple/kokomi/pb/slots;slots";

import "var_message.proto";
import "generic_message.proto";

message ListVarRequest {
    pb.Page page = 1;
    // string device_id = 2;
    string tags = 3;
    string type = 4;
}

message ListVarResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Var var = 3;
}

message PullVarRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string device_id = 3;
}

message PullVarResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Var var = 3;
}

service VarService {
    rpc Create(pb.Var) returns (pb.Var) {}
    rpc Update(pb.Var) returns (pb.Var) {}
    rpc View(pb.Id) returns (pb.Var) {}
    rpc ViewByName(pb.Name) returns (pb.Var) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ListVarRequest) returns (ListVarResponse) {}
    rpc GetValue(pb.Id) returns (pb.VarValue) {}
    rpc SetValue(pb.VarValue) returns (pb.MyBool) {}
    rpc SetValueUnchecked(pb.VarValue) returns (pb.MyBool) {}
    rpc GetValueByName(pb.Name) returns (pb.VarNameValue) {}
    rpc SetValueByName(pb.VarNameValue) returns (pb.MyBool) {}
    rpc SetValueByNameUnchecked(pb.VarNameValue) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Var) {}
    rpc Pull(PullVarRequest) returns (PullVarResponse) {}
}
